[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/hud/skill/skills_hud.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/hud/Hud.gd" type="Script" id=2]
[ext_resource path="res://ui/hud/health/health_full.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/hud_elements/aonares.png" type="Texture" id=4]
[ext_resource path="res://entities/characters/emuwaa/sprites/emu_head.png" type="Texture" id=5]

[node name="Hud" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="GUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 24.0
margin_right = -23.0
margin_bottom = -5.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBackground" type="VBoxContainer" parent="CanvasLayer/GUI/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 288.0
margin_bottom = 147.0
mouse_filter = 2
custom_constants/separation = 0

[node name="HealthEmpty" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer/TopBackground"]
margin_right = 284.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 6 )
custom_constants/separation = 0
alignment = 2

[node name="StaminaFill" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer/TopBackground"]
margin_top = 6.0
margin_right = 284.0
margin_bottom = 6.0
custom_constants/separation = 0
alignment = 2

[node name="Top" type="VBoxContainer" parent="CanvasLayer/GUI/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 288.0
margin_bottom = 147.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Health" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer/Top"]
margin_right = 284.0
margin_bottom = 6.0
custom_constants/separation = 0
alignment = 2

[node name="HealthFull" parent="CanvasLayer/GUI/MarginContainer/Top/Health" instance=ExtResource( 3 )]
margin_left = 265.0
margin_right = 284.0
margin_bottom = 6.0

[node name="Stamina" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer/Top"]
margin_top = 6.0
margin_right = 284.0
margin_bottom = 6.0
custom_constants/separation = 0
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer2"]
margin_right = 310.0
margin_bottom = 170.0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer2/logo"]
margin_left = 275.0
margin_right = 310.0
margin_bottom = 170.0
rect_min_size = Vector2( 35, 25 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="VBoxContainer" parent="CanvasLayer/GUI/MarginContainer2"]
margin_right = 310.0
margin_bottom = 170.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsHud" parent="CanvasLayer/GUI/MarginContainer2/Bottom" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 146.0
margin_right = 310.0
margin_bottom = 170.0

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 22.0
margin_right = -16.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer3"]
margin_right = 299.0
margin_bottom = 153.0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer3/HBoxContainer"]
margin_left = 284.0
margin_right = 299.0
margin_bottom = 153.0
texture = ExtResource( 5 )
